fix filter results button spacing

--- a/styles/components/Search.module.scss
+++ b/styles/components/Search.module.scss
@@ -37,5 +37,4 @@
 
 .refineSearchContainer {
   background-color: var(--nypl-colors-ui-bg-default);
-  width: fit-content;
 }
